--- a/index.html
+++ b/index.html
@@ -48,17 +48,15 @@
     <header id="Hero-Section" class="text-light text-end py-5 mt-5">
         <div class="container">
             <div class="ms-auto col-12 col-md-7 ">
-                <h1 class="display-1 fw-bold my-5">
-                    Comidas del fin <br> del mundo
+                <h1 class="display-3 fw-bold my-5">
+                    Agrícultura y riego <br> sustentable
                 </h1>
-                <p class="my-5">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis, accusamus iusto quibusdam
-                    dignissimos labore sequi. Cupiditate reiciendis eius dolore, illum adipisci harum voluptas iste
-                    mollitia inventore provident labore voluptatum nemo.
+                <p class="fs-4 my-5">
+                    Es posible la producción agrícola "amigable" con el medio ambiente y el correcto uso de los recursos. La tecnología es el futuro en la produccion de los alimentos.
                 </p>
                 <div class="mb-5 pb-5">
-                    <button class="btn btn-lg btn-outline-info text-light me-4">Trabajos</button>
-                    <button class="btn btn-lg btn-info text-light">Contacto</button>
+                    <button class="btn btn-lg btn-outline-success text-light me-4">Trabajos</button>
+                    <button class="btn btn-lg btn-success text-light">Contacto</button>
                 </div>
             </div>
         </div>
