Cambios en <section> Mis Trabajos

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
     </section>
 
 
-    <section id="Mis-trabajos" class="my-5 p-5 bg-info">
+    <section id="Mis-trabajos" class="my-5 p-5 bg-success">
 
         <h2 class="display-4 fw-bold text-center text-light mb-3">Mis trabajos</h2>
 
@@ -108,14 +108,11 @@
                 <div class="card">
                     <div class="image-top" style="background-image: url(assets/img/card-1.jpg)"></div>
                     <div class="card-body">
-                        <h5 class="card-title fw-bold">Asado en la Patagonia</h5>
+                        <h5 class="card-title fw-bold">Fruta de exportación</h5>
                         <p class="card-text">
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                            Explicabo iure sint, perspiciatis distinctio molestias nihil
-                            repudiandae neque rem adipisci repellendus libero illo quo
-                            blanditiis, velit quasi ad, recusandae voluptates officia.
+                           He aportado a la producción de fruta de exportación de primer nivel, para los mercados más exigentes del mundo.
                         </p>
-                        <button type="button" class="btn btn-outline-info">
+                        <button type="button" class="btn btn-outline-success">
                             Ver más
                         </button>
                     </div>
@@ -125,14 +122,11 @@
                 <div class="card">
                     <div class="image-top" style="background-image: url(assets/img/card-2.jpg)"></div>
                     <div class="card-body">
-                        <h5 class="card-title fw-bold">Papas del fin del mundo</h5>
+                        <h5 class="card-title fw-bold">Recurso Hídrico</h5>
                         <p class="card-text">
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                            Deserunt a culpa doloremque voluptatem dicta nam. Maxime ipsum,
-                            consequatur quos error fuga excepturi quo. Laudantium optio
-                            pariatur laboriosam modi, ea molestias?
+                            He implementado riego tecnificado para aprovechar al máximo el agua, con gran importancia para zonas con problemas graves de sequía.
                         </p>
-                        <button type="button" class="btn btn-outline-info">
+                        <button type="button" class="btn btn-outline-success">
                             Ver más
                         </button>
                     </div>
@@ -142,14 +136,11 @@
                 <div class="card">
                     <div class="image-top" style="background-image: url(assets/img/card-3.jpg)"></div>
                     <div class="card-body">
-                        <h5 class="card-title fw-bold">Salmones de Alaska</h5>
+                        <h5 class="card-title fw-bold">Tecnología</h5>
                         <p class="card-text">
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                            Obcaecati facere quibusdam sint id laborum magni velit ducimus
-                            corporis facilis qui architecto dolor, accusamus eveniet
-                            exercitationem fugit. Quod autem neque ducimus.
+                            Implementando la tecnología hasta en el más mínimo trabajo : Telemetría, manejo de información y registros en la nube.
                         </p>
-                        <button type="button" class="btn btn-outline-info">
+                        <button type="button" class="btn btn-outline-success">
                             Ver más
                         </button>
                     </div>
