Cambios en <section> Contacto y <footer>

--- a/index.html
+++ b/index.html
@@ -156,11 +156,7 @@
 
         <h2 class="display-4 fw-bold text-center my-4">Contáctame</h2>
 
-        <p class="text-center my-4 d-none d-md-block">Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-            Doloribus
-            sapiente, autem delectus totam expedita
-            animi corporis dolorem qui magnam, aspernatur officiis quasi culpa tempora est commodi. Voluptate beatae
-            tempora quaerat?</p>
+        <p class="text-center my-4 d-none d-md-block">Te invito a contactarme si estás interesado en informarte más al respecto. También siéntete libre de enviarme propuestas de trabajo, colaboración en conjunto o invitacióones.
 
         <form>
 
@@ -193,8 +189,8 @@
 
 
 
-    <footer class="bg-dark text-center text-light p-4">
-        <p class="mb-0">Olivia Ros 2019. Todos los derechos reservados.</p>
+    <footer class="bg-success text-center text-light p-4">
+        <p class="mb-0">Mario Pérez Castillo 2023. Todos los derechos reservados.</p>
     </footer>
 
 
