--- a/index.html
+++ b/index.html
@@ -1,202 +1,237 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+      crossorigin="anonymous"
+    />
+    <link rel="icon" type="image/png" href="./assets/img/gota.png" />
     <title>Mario Pérez</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/all.min.css"
-        integrity="sha512-q3eWabyZPc1XTCmF+8/LuE1ozpg5xxn7iO89yfSOd5/oKvyqLngoNGsx8jq92Y8eXJ/IRxQbEC+FGSYxtk2oiw=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="./assets/css/style.css">
-</head>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/all.min.css"
+      integrity="sha512-q3eWabyZPc1XTCmF+8/LuE1ozpg5xxn7iO89yfSOd5/oKvyqLngoNGsx8jq92Y8eXJ/IRxQbEC+FGSYxtk2oiw=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link rel="stylesheet" href="./assets/css/style.css" />
+  </head>
 
-<body>
+  <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-success p-2 fixed-top">
-        <div class="container">
-            <a class="navbar-brand" href="#">
-                <img src="assets/img/logo.png" class="img-fluid">
-            </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav ms-auto mb-2 mb-lg-0 fs-5">
-                    <li class="nav-item">
-                        <a class="nav-link text-dark" href="https://www.linkedin.com/in/magrocast" target="_blank">Acerca de mi</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-dark" href="#">Trabajos</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-dark" href="#">Contacto</a>
-                    </li>
-
-                </ul>
-
-            </div>
+      <div class="container">
+        <a class="navbar-brand" href="#">
+          <img src="assets/img/logo.png" class="img-fluid" />
+        </a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          aria-controls="navbarSupportedContent"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav ms-auto mb-2 mb-lg-0 fs-5">
+            <li class="nav-item">
+              <a
+                class="nav-link text-dark"
+                href="https://www.linkedin.com/in/magrocast"
+                target="_blank"
+                >Acerca de mi</a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link text-dark" href="#">Trabajos</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link text-dark" href="#">Contacto</a>
+            </li>
+          </ul>
         </div>
+      </div>
     </nav>
 
     <header id="Hero-Section" class="text-light text-end py-5 mt-5">
-        <div class="container">
-            <div class="ms-auto col-12 col-md-7 ">
-                <h1 class="display-3 fw-bold my-5">
-                    Agrícultura y riego <br> sustentable
-                </h1>
-                <p class="fs-4 my-5">
-                    Es posible la producción agrícola "amigable" con el medio ambiente y el correcto uso de los recursos. La tecnología es el futuro en la produccion de los alimentos.
-                </p>
-                <div class="mb-5 pb-5">
-                    <button class="btn btn-lg btn-outline-success text-light me-4">Trabajos</button>
-                    <button class="btn btn-lg btn-success text-light">Contacto</button>
-                </div>
-            </div>
+      <div class="container">
+        <div class="ms-auto col-12 col-md-7">
+          <h1 class="display-3 fw-bold my-5">
+            Agrícultura y riego <br />
+            sustentable
+          </h1>
+          <p class="fs-4 my-5">
+            Es posible la producción agrícola "amigable" con el medio ambiente y
+            el correcto uso de los recursos. La tecnología es el futuro en la
+            produccion de los alimentos.
+          </p>
+          <div class="mb-5 pb-5">
+            <button class="btn btn-lg btn-outline-success text-light me-4">
+              Trabajos
+            </button>
+            <button class="btn btn-lg btn-success text-light">Contacto</button>
+          </div>
         </div>
+      </div>
     </header>
 
-
     <section id="Acerca-de-mi" class="container text-center my-5">
+      <h2 class="display-3 fw-bold my-4">Acerca de mi</h2>
 
+      <p class="my-4">
+        Técnico Agropecuario con más de 8 años de experiencia en producción
+        frutícola, Administración logística y riego tecnificado.
+      </p>
 
-        <h2 class="display-3 fw-bold my-4">Acerca de mi</h2>
-
-        <p class="my-4">
-            Técnico Agropecuario con más de 8 años de experiencia en producción frutícola, Administración logística y riego tecnificado.
-        </p>
-
-
-        <div class="row">
-            <div class="col-12 col-md-4">
-                <i class="fas fa-camera fa-3x my-3"></i>
-                <h3 class="my-3 fw-bold">Material Audiovisual</h3>
-                <p class="my-3">
-                    Comparto fotografías y videos de mi día a día en mis labores in situ. Puedes ver más material en mi Instagram.
-                </p>
-            </div>
-            <div class="col-12 col-md-4">
-                <i class="fas fa-bullhorn fa-3x my-3"></i>
-                <h3 class="my-3 fw-bold">Divulgación</h3>
-                <p class="my-3">
-                   Asisto esporadicamente a exposiciones a las que soy invitado para dar a conocer la innovación tecnológica en el rubro Agrícola.
-                </p>
-            </div>
-            <div class="col-12 col-md-4">
-                <i class="far fa-map fa-3x my-3"></i>
-                <h3 class="my-3 fw-bold">De Norte a Sur</h3>
-                <p class="my-3">
-                    He recorrido desde el Valle de Copiapó hasta el Valle de Colchahua: Trabajando en la producción de Uva de mesa, Cítricos, Berries y Cerezas.
-                </p>
-            </div>
+      <div class="row">
+        <div class="col-12 col-md-4">
+          <i class="fas fa-camera fa-3x my-3"></i>
+          <h3 class="my-3 fw-bold">Material Audiovisual</h3>
+          <p class="my-3">
+            Comparto fotografías y videos de mi día a día en mis labores in
+            situ. Puedes ver más material en mi Instagram.
+          </p>
         </div>
+        <div class="col-12 col-md-4">
+          <i class="fas fa-bullhorn fa-3x my-3"></i>
+          <h3 class="my-3 fw-bold">Divulgación</h3>
+          <p class="my-3">
+            Asisto esporadicamente a exposiciones a las que soy invitado para
+            dar a conocer la innovación tecnológica en el rubro Agrícola.
+          </p>
+        </div>
+        <div class="col-12 col-md-4">
+          <i class="far fa-map fa-3x my-3"></i>
+          <h3 class="my-3 fw-bold">De Norte a Sur</h3>
+          <p class="my-3">
+            He recorrido desde el Valle de Copiapó hasta el Valle de Colchahua:
+            Trabajando en la producción de Uva de mesa, Cítricos, Berries y
+            Cerezas.
+          </p>
+        </div>
+      </div>
     </section>
-
 
     <section id="Mis-trabajos" class="my-5 p-5 bg-success">
+      <h2 class="display-4 fw-bold text-center text-light mb-3">
+        Mis trabajos
+      </h2>
 
-        <h2 class="display-4 fw-bold text-center text-light mb-3">Mis trabajos</h2>
-
-        <div class="row">
-            <div class="col-12 col-sm-4 py-2">
-                <div class="card">
-                    <div class="image-top" style="background-image: url(assets/img/card-1.jpg)"></div>
-                    <div class="card-body">
-                        <h5 class="card-title fw-bold">Fruta de exportación</h5>
-                        <p class="card-text">
-                           He aportado a la producción de fruta de exportación de primer nivel, para los mercados más exigentes del mundo.
-                        </p>
-                        <button type="button" class="btn btn-outline-success">
-                            Ver más
-                        </button>
-                    </div>
-                </div>
+      <div class="row">
+        <div class="col-12 col-sm-4 py-2">
+          <div class="card">
+            <div
+              class="image-top"
+              style="background-image: url(assets/img/card-1.jpg)"
+            ></div>
+            <div class="card-body">
+              <h5 class="card-title fw-bold">Fruta de exportación</h5>
+              <p class="card-text">
+                He aportado a la producción de fruta de exportación de primer
+                nivel, para los mercados más exigentes del mundo.
+              </p>
+              <button type="button" class="btn btn-outline-success">
+                Ver más
+              </button>
             </div>
-            <div class="col-12 col-sm-4 py-2">
-                <div class="card">
-                    <div class="image-top" style="background-image: url(assets/img/card-2.jpg)"></div>
-                    <div class="card-body">
-                        <h5 class="card-title fw-bold">Recurso Hídrico</h5>
-                        <p class="card-text">
-                            He implementado riego tecnificado para aprovechar al máximo el agua, con gran importancia para zonas con problemas graves de sequía.
-                        </p>
-                        <button type="button" class="btn btn-outline-success">
-                            Ver más
-                        </button>
-                    </div>
-                </div>
-            </div>
-            <div class="col-12 col-sm-4 py-2">
-                <div class="card">
-                    <div class="image-top" style="background-image: url(assets/img/card-3.jpg)"></div>
-                    <div class="card-body">
-                        <h5 class="card-title fw-bold">Tecnología</h5>
-                        <p class="card-text">
-                            Implementando la tecnología hasta en el más mínimo trabajo : Telemetría, manejo de información y registros en la nube.
-                        </p>
-                        <button type="button" class="btn btn-outline-success">
-                            Ver más
-                        </button>
-                    </div>
-                </div>
-            </div>
+          </div>
         </div>
-
+        <div class="col-12 col-sm-4 py-2">
+          <div class="card">
+            <div
+              class="image-top"
+              style="background-image: url(assets/img/card-2.jpg)"
+            ></div>
+            <div class="card-body">
+              <h5 class="card-title fw-bold">Recurso Hídrico</h5>
+              <p class="card-text">
+                He implementado riego tecnificado para aprovechar al máximo el
+                agua, con gran importancia para zonas con problemas graves de
+                sequía.
+              </p>
+              <button type="button" class="btn btn-outline-success">
+                Ver más
+              </button>
+            </div>
+          </div>
+        </div>
+        <div class="col-12 col-sm-4 py-2">
+          <div class="card">
+            <div
+              class="image-top"
+              style="background-image: url(assets/img/card-3.jpg)"
+            ></div>
+            <div class="card-body">
+              <h5 class="card-title fw-bold">Tecnología</h5>
+              <p class="card-text">
+                Implementando la tecnología hasta en el más mínimo trabajo :
+                Telemetría, manejo de información y registros en la nube.
+              </p>
+              <button type="button" class="btn btn-outline-success">
+                Ver más
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
     </section>
-
-
 
     <section id="Contacto" class="container my-5">
+      <h2 class="display-4 fw-bold text-center my-4">Contáctame</h2>
 
-        <h2 class="display-4 fw-bold text-center my-4">Contáctame</h2>
+      <p class="text-center my-4 d-none d-md-block">
+        Te invito a contactarme si estás interesado en informarte más al
+        respecto. También siéntete libre de enviarme propuestas de trabajo,
+        colaboración en conjunto o invitacióones.
+      </p>
 
-        <p class="text-center my-4 d-none d-md-block">Te invito a contactarme si estás interesado en informarte más al respecto. También siéntete libre de enviarme propuestas de trabajo, colaboración en conjunto o invitacióones.
+      <form>
+        <div class="form-group mb-4">
+          <label class="mb-2">Nombre</label>
+          <input class="form-control" placeholder="Nombre" />
+        </div>
 
-        <form>
+        <div class="form-group mb-4">
+          <label class="mb-2">Correo electrónico</label>
+          <input class="form-control" placeholder="Correo electrónico" />
+        </div>
 
+        <div class="form-group">
+          <label class="mb-2">Mensaje</label>
+          <textarea
+            class="form-control"
+            placeholder="Escribe aquí tu mensaje"
+          ></textarea>
+        </div>
 
-            <div class="form-group mb-4">
-                <label class="mb-2">Nombre</label>
-                <input class="form-control" placeholder="Nombre">
-            </div>
-
-            <div class="form-group mb-4">
-                <label class="mb-2">Correo electrónico</label>
-                <input class="form-control" placeholder="Correo electrónico" />
-            </div>
-
-
-            <div class="form-group">
-                <label class="mb-2">Mensaje</label>
-                <textarea class="form-control" placeholder="Escribe aquí tu mensaje"></textarea>
-            </div>
-
-            <div class="my-3 text-end">
-                <button class="btn btn-info text-light">Enviar</button>
-            </div>
-
-
-
-        </form>
-
+        <div class="my-3 text-end">
+          <button class="btn btn-info text-light">Enviar</button>
+        </div>
+      </form>
     </section>
 
-
-
     <footer class="bg-success text-center text-light p-4">
-        <p class="mb-0">Mario Pérez Castillo 2023. Todos los derechos reservados.</p>
+      <p class="mb-0">
+        Mario Pérez Castillo 2023. Todos los derechos reservados.
+      </p>
     </footer>
 
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-        crossorigin="anonymous"></script>
-</body>
-
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
